nginx-ingress-ctrl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx
      containers:
        - name: ingress-nginx
          image: k8s.gcr.io/ingress-nginx/controller:v1.9.3
          args:
            - "/nginx-ingress-controller"
            - "--configmap=$(POD_NAMESPACE)/nginx-configuration"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          securityContext:
            allowPrivilegeEscalation: true
